<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home_navigation"
        android:enabled="true"
        android:icon="@drawable/ic_home_navigation"
        android:title="@string/home"
        />
    <item
        android:id="@+id/menu_search_navigation"
        android:enabled="true"
        android:icon="@drawable/ic_search_navigation"
        android:title="@string/search"/>
    <item
        android:id="@+id/menu_upload_navigation"
        android:enabled="true"
        android:icon="@drawable/ic_upload"
        android:title="@string/upload"/>
    <item
        android:id="@+id/menu_profile_navigation"
        android:enabled="true"
        android:icon="@drawable/ic_profile_menu_item"
        android:title="@string/profile"/>

</menu>