<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".loginService.fragments.Register">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        >

        <EditText
            android:id="@+id/idRegFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/enter_full_name"
            android:inputType="text"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/idRegEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idRegFullName"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/enter_e_mail_id"
            android:inputType="text"
            android:textAlignment="center" />
        <EditText
            android:id="@+id/idRegPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idRegEmail"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"/>
        <Button
            android:id="@+id/idBtnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idRegPassword"
            android:layout_marginTop="40dp"
            android:text="@string/sign_up"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            />
        <TextView
            android:id="@+id/idOr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idBtnSignUp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:text="@string/or"
            android:textAlignment="center"
            />
        <LinearLayout
            android:id="@+id/idSocialLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_below="@+id/idOr"
            android:layout_marginTop="15dp"
            >
            <Button
                android:id="@+id/idBtnGoogle"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginEnd="5dp"
                android:text="@string/google"
                android:drawableLeft="@drawable/common_google_signin_btn_icon_dark"
                app:backgroundTint="#AF8F8F"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/idBtnFacebook"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:text="@string/facebook"
                app:backgroundTint="#3B3595" />
        </LinearLayout>
        <TextView
            android:id="@+id/idAlreadyHaveAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idSocialLogin"
            android:text="@string/already_have_an_account"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"/>
    </RelativeLayout>
</layout>
