<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.uploadFragment.Upload">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        >
        <EditText
            android:id="@+id/idUploadTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_note_title"
            android:inputType="text"
            android:textAlignment="center"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            />
        <EditText
            android:id="@+id/idUploadDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_description"
            android:inputType="text"
            android:textAlignment="center"
            android:layout_below="@+id/idUploadTitle"
            android:layout_marginTop="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"/>
        <EditText
            android:id="@+id/idUploadPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_note_price"
            android:inputType="number"
            android:textAlignment="center"
            android:layout_below="@id/idUploadDescription"
            android:layout_marginTop="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"/>

        <ImageView
            android:id="@+id/idUploadThumbnail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idUploadPrice"
            android:layout_marginTop="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:srcCompat="@drawable/ic_upload"
            />
        <Button
            android:id="@+id/idUploadBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textAlignment="center"
            android:text="@string/upload"
            android:layout_below="@id/idUploadThumbnail"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            />
    </RelativeLayout>
</layout>
